# FunCPP

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  Vagrantfile  license.txt
chef/cookbooks/gcc11/: metadata.rb
chef/cookbooks/gcc11/recipes/: default.rb
chef/roles/: develop.rb
include/funcpp/: array.h  string.h
src/: CMakeLists.txt  array.cpp  string.cpp
tests/: CMakeLists.txt  main.cpp  regexTest.cpp  stringTest.cpp
